--- a/src/style.css
+++ b/src/style.css
@@ -39,13 +39,26 @@ h1 {
   background-color: rgb(36, 35, 35);
 }
 
+#monument-title {
+  all: unset;
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .action-buttons {
   position: fixed;
-  bottom: 20px;
-  margin-left: 5%;
+  bottom: 10px;
+  margin-left: 1%;
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 20px;
   z-index: 20;
 }
@@ -70,11 +83,17 @@ h1 {
   display: none;
   position: fixed;
   z-index: 20;
-  top: 6%;
-  right: 3%;
+  top: 3%;
+  right: 1%;
   width: 100%;
   height: 85vh;
   max-width: 450px;
+}
+
+#info.info--right {
+  top: 3%;
+  left: 3%;
+  right: auto;
 }
 
 .info-content {
@@ -94,7 +113,7 @@ h1 {
   background-clip: padding-box;
   box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(20px);
-  padding: 10px 10px 15px 15px;
+  padding: 10px 10px 20px 15px;
   /* overflow: hidden; тук блокираме скрол на основния контейнер */
 }
 
@@ -241,7 +260,7 @@ h1 {
     right: 0px;
     align-items: center;
     justify-content: center;
-    gap:5px;
+    gap: 5px;
     flex-wrap: wrap;
 
     button {
@@ -272,6 +291,6 @@ h1 {
   }
 
   #maximize {
-  display: block;
-}
+    display: block;
+  }
 }
