--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ h1 {
   color: white;
   font-size: 20px;
   font-weight: 600;
+  text-decoration: underline;
 }
 
 .action-buttons {
@@ -92,7 +93,7 @@ h1 {
 
 #info.info--right {
   top: 3%;
-  left: 3%;
+  left: 2%;
   right: auto;
 }
 
@@ -113,7 +114,7 @@ h1 {
   background-clip: padding-box;
   box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(20px);
-  padding: 10px 10px 20px 15px;
+  padding: 10px 10px 22px 15px;
   /* overflow: hidden; тук блокираме скрол на основния контейнер */
 }
 
